# typewriter

./: LICENSE  README.md  typewriter.cabal
Data/: Typewriter.hs
Data/Typewriter/: Apply.hs  Core.hs  Data.hs  Demote.hs  Functions.hs  TypeEq.hs  Types.hs  Variadic.hs
Data/Typewriter/Data/: Binary.hs  Indexed.hs  List.hs  Nat.hs  Vec.hs
Data/Typewriter/Data/Binary/: Bit.hs  BitList.hs
Data/Typewriter/Types/: Algebraic.hs  Boolean.hs  Peano.hs
Data/Typewriter/Types/Algebraic/: Card.hs
Data/Typewriter/Variadic/: Apply.hs  Compose.hs  Flip.hs  Natural.hs
