Name:                typewriter
Version:             0.1
Synopsis:            Ridiculous and utterly inexcusable type hackery.
Description:         
Author:              C. McCann
Maintainer:          cam@uptoisomorphism.net
Copyright:           Copyright (c) 2011 Casey A. McCann
Stability:           experimental
Category:            Data
License:             BSD3
License-file:        LICENSE
Cabal-version:       >=1.2
Build-type:          Simple

Library
    Exposed-modules: Data.Typewriter
                   , Data.Typewriter.Core
                   , Data.Typewriter.Data
                   , Data.Typewriter.Data.List
                   , Data.Typewriter.Data.Nat
                   , Data.Typewriter.Demote
                   , Data.Typewriter.Functions
                   , Data.Typewriter.TypeEq
                   , Data.Typewriter.Types
                   , Data.Typewriter.Types.Algebraic
                   , Data.Typewriter.Types.Algebraic.Card
                   , Data.Typewriter.Types.Boolean
                   , Data.Typewriter.Types.Peano
                   , Data.Typewriter.Variadic
                   , Data.Typewriter.Variadic.Apply
                   , Data.Typewriter.Variadic.Compose
                   , Data.Typewriter.Variadic.Flip
                   , Data.Typewriter.Variadic.Natural
    Build-depends: base >= 4 && < 5
  

